renamed cpp file

--- a/Project Tracker Console App/Project Tracker Console App.vcxproj
+++ b/Project Tracker Console App/Project Tracker Console App.vcxproj
@@ -123,7 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Project Tracker Console App.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="LICENSE" />
